--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>BeCode/Mwenbwa</title>
-
         <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     </head>
     <body>
         <div id="app"></div>
+        <div id="map"></div>
     </body>
 </html>
