--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     </head>
     <body>
+        <div id="ajout"></div>
         <div id="app"></div>
     </body>
 </html>
