--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css"
+        />
+        <link rel="stylesheet" href="https://unpkg.com/bulma-spacing" />
         <meta charset="utf-8" />
         <title>BeCode/Mwenbwa</title>
 
-        <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+        <meta
+            name="viewport"
+            content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+        />
     </head>
+
     <body>
         <div id="app"></div>
+        <div id="test"></div>
     </body>
 </html>
